--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <header>
-      <a href="www.figma.com">Webstudio</a>
+      <a href="./index.html">Webstudio</a>
       <nav>
         <ul>
-          <li><a href="#">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
